<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_fragment_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/delete_fragment_label"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/menu_edit"
        android:textColor="@color/light_orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_fragment_parent" />

    <View
        android:id="@+id/edit_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_label"/>

    <EditText
        android:id="@+id/enter_new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10sp"
        android:background="@drawable/form_button_rectangle_stroke"
        android:gravity="center_vertical"
        android:paddingVertical="10sp"
        android:paddingHorizontal="10sp"
        android:hint="@string/enter_name_hint"
        android:textAlignment="gravity"
        android:textColor="@color/text_color_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_fragment_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="-10sp"
        android:background="@drawable/form_round_button"
        android:backgroundTint="@color/main_background"
        android:text="@string/tag_new_name"
        android:textColor="@color/light_orange"
        android:paddingHorizontal="5sp"
        app:layout_constraintTop_toTopOf="@+id/enter_new_name"
        app:layout_constraintStart_toStartOf="@id/enter_new_name" />

    <EditText
        android:id="@+id/enter_new_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50sp"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="10sp"
        android:background="@drawable/form_button_rectangle_stroke"
        android:gravity="center_vertical"
        android:paddingVertical="10sp"
        android:paddingHorizontal="10sp"
        android:hint="@string/enter_description_hint"
        android:textAlignment="gravity"
        android:textColor="@color/text_color_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_new_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="-10sp"
        android:background="@drawable/form_round_button"
        android:backgroundTint="@color/main_background"
        android:text="@string/tag_new_description"
        android:textColor="@color/light_orange"
        android:paddingHorizontal="5sp"
        app:layout_constraintTop_toTopOf="@+id/enter_new_description"
        app:layout_constraintStart_toStartOf="@id/enter_new_description" />

    <TextView
        android:id="@+id/edit_fragment_positive_button"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20sp"
        android:layout_height="30sp"
        android:layout_marginVertical="10sp"
        android:text="@string/fragment_finish_btn"
        android:textColor="@color/light_orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/edit_fragment_parent"
        app:layout_constraintTop_toBottomOf="@id/enter_new_description"/>

    <TextView
        android:id="@+id/edit_fragment_negative_button"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginVertical="10sp"
        android:text="@string/fragment_cancel_btn"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/edit_fragment_positive_button"
        app:layout_constraintTop_toBottomOf="@id/enter_new_description"/>

</androidx.constraintlayout.widget.ConstraintLayout>