<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_fragment_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/delete_fragment_label"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/menu_delete"
        android:textColor="@color/light_orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/delete_fragment_parent" />

    <View
        android:id="@+id/delete_fragment_line"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/light_orange"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_label"/>

    <TextView
        android:id="@+id/delete_fragment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:minHeight="30sp"
        android:text="@string/delete_question"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_line" />

    <TextView
        android:id="@+id/delete_fragment_color_text"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/color_text"
        android:gravity="bottom"
        android:textAlignment="gravity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/delete_fragment_parent"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_text"/>

    <FrameLayout
        android:id="@+id/delete_fragment_frame"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginTop="5sp"
        android:layout_marginStart="13sp"
        app:layout_constraintStart_toEndOf="@id/delete_fragment_color_text"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_text"
        android:background="@drawable/form_button_rectangle_stroke">

        <View
            android:id="@+id/delete_fragment_color"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center"
            android:background="@color/teal_200" />

    </FrameLayout>

    <TextView
        android:id="@+id/delete_fragment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30sp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="10sp"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/delete_fragment_parent"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_color_text"/>

    <TextView
        android:id="@+id/delete_fragment_positive_button"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20sp"
        android:layout_height="30sp"
        android:layout_marginTop="5sp"
        android:text="@string/fragment_delete_btn"
        android:textColor="@color/light_red"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/delete_fragment_parent"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_name"/>

    <TextView
        android:id="@+id/delete_fragment_negative_button"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="5sp"
        android:text="@string/fragment_cancel_btn"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/delete_fragment_positive_button"
        app:layout_constraintTop_toBottomOf="@id/delete_fragment_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>